<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="car"
            type="com.youngcha.ohmycarset.viewmodel.CarCustomizationViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ly_summary"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_result_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="48dp"
            android:text="@string/estimate_summary"
            android:textColor="@color/cool_grey_black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="20dp"
            android:text=""
            android:textColor="@color/cool_grey_black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/v_car"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="36dp"
            android:background="@color/cool_grey_002"
            app:layout_constraintTop_toBottomOf="@id/tv_result_summary" />

        <TextView
            android:id="@+id/tv_car_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/palisade"
            android:textColor="@color/cool_grey_black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/v_car"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/v_car" />

        <TextView
            android:id="@+id/tv_trim_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/leblanc_name"
            android:textColor="@color/cool_grey_black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/v_car"
            app:layout_constraintStart_toEndOf="@id/tv_car_name"
            app:layout_constraintTop_toTopOf="@id/v_car" />

        <TextView
            android:id="@+id/tv_car_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text=""
            app:layout_constraintBottom_toBottomOf="@id/v_car"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/v_car" />

        <TextView
            android:id="@+id/tv_powertrain_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/power_train"
            android:textColor="#8F8F8F"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_car" />

        <include
            android:id="@+id/item_powertrain"
            layout="@layout/item_estimate_summary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_powertrain_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/item_drivingsystem"
            app:layout_constraintTop_toTopOf="@id/tv_powertrain_name" />

        <TextView
            android:id="@+id/tv_drivingsystem_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/driving_system"
            android:textColor="#8F8F8F"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/tv_powertrain_name"
            app:layout_constraintTop_toBottomOf="@id/tv_powertrain_name" />

        <include
            android:id="@+id/item_drivingsystem"
            layout="@layout/item_estimate_summary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_drivingsystem_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_drivingsystem_name"
            app:layout_constraintTop_toTopOf="@id/tv_drivingsystem_name" />

        <TextView
            android:id="@+id/tv_bodytype_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/body_type"
            android:textColor="#8F8F8F"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/tv_drivingsystem_name"
            app:layout_constraintTop_toBottomOf="@id/tv_drivingsystem_name" />

        <include
            android:id="@+id/item_bodytype"
            layout="@layout/item_estimate_summary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_bodytype_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/item_drivingsystem"
            app:layout_constraintTop_toTopOf="@id/tv_bodytype_name" />

        <View
            android:id="@+id/v_color"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="36dp"
            android:background="@color/cool_grey_002"
            app:layout_constraintTop_toBottomOf="@id/tv_bodytype_name" />

        <TextView
            android:id="@+id/tv_color_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/color"
            android:textColor="@color/cool_grey_black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/v_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/v_color" />

        <TextView
            android:id="@+id/tv_color_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text=""
            app:layout_constraintBottom_toBottomOf="@id/v_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/v_color" />

        <TextView
            android:id="@+id/tv_exterior_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/exterior_color"
            android:textColor="#8F8F8F"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_color" />

        <include
            android:id="@+id/item_exterior"
            layout="@layout/item_estimate_summary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_exterior_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/item_drivingsystem"
            app:layout_constraintTop_toTopOf="@id/tv_exterior_name" />


        <TextView
            android:id="@+id/tv_interior_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:text="@string/interior_color"
            android:textColor="#8F8F8F"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_exterior_name" />

        <include
            android:id="@+id/item_interior"
            layout="@layout/item_estimate_summary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_interior_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/item_drivingsystem"
            app:layout_constraintTop_toTopOf="@id/tv_interior_name" />

        <View
            android:id="@+id/v_option"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="36dp"
            android:background="@color/cool_grey_002"
            app:layout_constraintTop_toBottomOf="@id/tv_interior_name" />

        <TextView
            android:id="@+id/tv_option_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/option_txt"
            android:textColor="@color/cool_grey_black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/v_option"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/v_option" />

        <TextView
            android:id="@+id/tv_option_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text=""
            app:layout_constraintBottom_toBottomOf="@id/v_option"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/v_option" />

        <TextView
            android:id="@+id/tv_chooser_option_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/chooser_option"
            android:textColor="#8F8F8F"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_option" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_chooser_option"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/item_drivingsystem"
            app:layout_constraintTop_toTopOf="@id/tv_chooser_option_name" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_request_purchase"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/shape_round"
            android:backgroundTint="@color/main_hyundai_blue"
            android:text="@string/request_purchase_consultation"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_chooser_option" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_drive_test"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="9dp"
            android:background="@drawable/btn_select_style"
            android:text="@string/request_driving"
            android:textColor="@color/main_hyundai_blue"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_request_purchase" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_share"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="9dp"
            android:background="@drawable/shape_round"
            android:backgroundTint="@color/cool_grey_002"
            android:text="@string/share"
            android:textColor="@color/main_hyundai_blue"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/btn_save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_drive_test" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/shape_round"
            android:backgroundTint="@color/cool_grey_002"
            android:text="@string/save"
            android:textColor="@color/main_hyundai_blue"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_share"
            app:layout_constraintTop_toBottomOf="@id/btn_drive_test"
            app:layout_constraintTop_toTopOf="@id/btn_share" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>